@@ -1,3 +1,3 @@
 <div class='image'>
-<img height='90' src='$url'>
+<a href='$link'><img height='90' src='$url'></a>
 </div>
