@@ -1,5 +1,7 @@
 2013-06-14  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
+	* facebook/entry.py, tumblr/entry.py: Added support for GNOME
+	  sushi previewer for Facebook & Tumblr.
 	* menu.py, updatewindow.py, twitter/account.py: Added support for
 	  deleting Twitter direct messages.
 	* twitter/tweetentry.py (DirectMessageEntry): Fixed a bug that
